[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
capitalize = "0.3.4"
average = "0.16.0"
slugify = "0.1.0"
emval = "0.1.12"
passwords = "3.1.16"
chrono = "0.4.44"
uuid = { version = "1", features = ["v4"] }
axum-test = "20.0.0"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1"
serde_json = "1"

[[bin]]
name = "server"
path = "src/main.rs"
